exageostat_parsec/hicma/chameleon/control/morse_zf90.F90


      interface
         function MORSE_zgelqf_Tile_Async_c(A,T,sequence,request) &
          & bind(c, name='MORSE_zgelqf_Tile_Async')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zgelqf_Tile_Async_c
            type(c_ptr), value :: A
            type(c_ptr), value :: T
            type(c_ptr), value :: sequence
            type(c_ptr), value :: request
          end function MORSE_zgelqf_Tile_Async_c
      end interface

      interface
         function MORSE_zgelqs_Tile_Async_c(A,T,B,sequence,request) &
          & bind(c, name='MORSE_zgelqs_Tile_Async')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zgelqs_Tile_Async_c
            type(c_ptr), value :: A
            type(c_ptr), value :: T
            type(c_ptr), value :: B
            type(c_ptr), value :: sequence
            type(c_ptr), value :: request
          end function MORSE_zgelqs_Tile_Async_c
      end interface

      interface
         function MORSE_zgels_Tile_Async_c(trans,A,T,B,sequence,request) &
          & bind(c, name='MORSE_zgels_Tile_Async')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zgels_Tile_Async_c
            integer(kind=c_int), value :: trans
            type(c_ptr), value :: A
            type(c_ptr), value :: T
            type(c_ptr), value :: B
            type(c_ptr), value :: sequence
            type(c_ptr), value :: request
          end function MORSE_zgels_Tile_Async_c
      end interface

      interface
         function MORSE_zgemm_Tile_Async_c(transA,transB,alpha,A,B,beta,C,sequence,request) &
          & bind(c, name='MORSE_zgemm_Tile_Async')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zgemm_Tile_Async_c
            integer(kind=c_int), value :: transA
            integer(kind=c_int), value :: transB
            complex(kind=c_double_complex), value :: alpha
            type(c_ptr), value :: A
            type(c_ptr), value :: B
            complex(kind=c_double_complex), value :: beta
            type(c_ptr), value :: C
            type(c_ptr), value :: sequence
            type(c_ptr), value :: request
          end function MORSE_zgemm_Tile_Async_c
      end interface

      interface
         function MORSE_zgeqrf_Tile_Async_c(A,T,sequence,request) &
          & bind(c, name='MORSE_zgeqrf_Tile_Async')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zgeqrf_Tile_Async_c
            type(c_ptr), value :: A
            type(c_ptr), value :: T
            type(c_ptr), value :: sequence
            type(c_ptr), value :: request
          end function MORSE_zgeqrf_Tile_Async_c
      end interface

      interface
         function MORSE_zgeqrs_Tile_Async_c(A,T,B,sequence,request) &
          & bind(c, name='MORSE_zgeqrs_Tile_Async')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zgeqrs_Tile_Async_c
            type(c_ptr), value :: A
            type(c_ptr), value :: T
            type(c_ptr), value :: B
            type(c_ptr), value :: sequence
            type(c_ptr), value :: request
          end function MORSE_zgeqrs_Tile_Async_c
      end interface

      interface
         function MORSE_zgesv_Tile_Async_c(A,IPIV,B,sequence,request) &
          & bind(c, name='MORSE_zgesv_Tile_Async')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zgesv_Tile_Async_c
            type(c_ptr), value :: A
            type(c_ptr), value :: IPIV
            type(c_ptr), value :: B
            type(c_ptr), value :: sequence
            type(c_ptr), value :: request
          end function MORSE_zgesv_Tile_Async_c
      end interface

      interface
         function MORSE_zgesv_incpiv_Tile_Async_c(A,L,IPIV,B,sequence,request) &
          & bind(c, name='MORSE_zgesv_incpiv_Tile_Async')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zgesv_incpiv_Tile_Async_c
            type(c_ptr), value :: A
            type(c_ptr), value :: L
            type(c_ptr), value :: IPIV
            type(c_ptr), value :: B
            type(c_ptr), value :: sequence
            type(c_ptr), value :: request
          end function MORSE_zgesv_incpiv_Tile_Async_c
      end interface

      interface
         function MORSE_zgesvd_Tile_Async_c(jobu,jobvt,A,S,U,VT,T,sequence,request) &
          & bind(c, name='MORSE_zgesvd_Tile_Async')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zgesvd_Tile_Async_c
            integer(kind=c_int), value :: jobu
            integer(kind=c_int), value :: jobvt
            type(c_ptr), value :: A
            type(c_ptr), value :: S
            type(c_ptr), value :: U
            type(c_ptr), value :: VT
            type(c_ptr), value :: T
            type(c_ptr), value :: sequence
            type(c_ptr), value :: request
          end function MORSE_zgesvd_Tile_Async_c
      end interface

      interface
         function MORSE_zgetrf_Tile_Async_c(A,IPIV,sequence,request) &
          & bind(c, name='MORSE_zgetrf_Tile_Async')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zgetrf_Tile_Async_c
            type(c_ptr), value :: A
            type(c_ptr), value :: IPIV
            type(c_ptr), value :: sequence
            type(c_ptr), value :: request
          end function MORSE_zgetrf_Tile_Async_c
      end interface

      interface
         function MORSE_zgetrf_incpiv_Tile_Async_c(A,L,IPIV,sequence,request) &
          & bind(c, name='MORSE_zgetrf_incpiv_Tile_Async')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zgetrf_incpiv_Tile_Async_c
            type(c_ptr), value :: A
            type(c_ptr), value :: L
            type(c_ptr), value :: IPIV
            type(c_ptr), value :: sequence
            type(c_ptr), value :: request
          end function MORSE_zgetrf_incpiv_Tile_Async_c
      end interface

      interface
         function MORSE_zgetrf_nopiv_Tile_Async_c(A,sequence,request) &
          & bind(c, name='MORSE_zgetrf_nopiv_Tile_Async')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zgetrf_nopiv_Tile_Async_c
            type(c_ptr), value :: A
            type(c_ptr), value :: sequence
            type(c_ptr), value :: request
          end function MORSE_zgetrf_nopiv_Tile_Async_c
      end interface

      interface
         function MORSE_zgetri_Tile_Async_c(A,IPIV,W,sequence,request) &
          & bind(c, name='MORSE_zgetri_Tile_Async')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zgetri_Tile_Async_c
            type(c_ptr), value :: A
            type(c_ptr), value :: IPIV
            type(c_ptr), value :: W
            type(c_ptr), value :: sequence
            type(c_ptr), value :: request
          end function MORSE_zgetri_Tile_Async_c
      end interface

      interface
         function MORSE_zgetrs_Tile_Async_c(trans,A,IPIV,B,sequence,request) &
          & bind(c, name='MORSE_zgetrs_Tile_Async')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zgetrs_Tile_Async_c
            integer(kind=c_int), value :: trans
            type(c_ptr), value :: A
            type(c_ptr), value :: IPIV
            type(c_ptr), value :: B
            type(c_ptr), value :: sequence
            type(c_ptr), value :: request
          end function MORSE_zgetrs_Tile_Async_c
      end interface

      interface
         function MORSE_zgetrs_incpiv_Tile_Async_c(A,L,IPIV,B,sequence,request) &
          & bind(c, name='MORSE_zgetrs_incpiv_Tile_Async')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zgetrs_incpiv_Tile_Async_c
            type(c_ptr), value :: A
            type(c_ptr), value :: L
            type(c_ptr), value :: IPIV
            type(c_ptr), value :: B
            type(c_ptr), value :: sequence
            type(c_ptr), value :: request
          end function MORSE_zgetrs_incpiv_Tile_Async_c
      end interface

      interface
         function MORSE_zheev_Tile_Async_c(jobz,uplo,A,W,T,Q,LDQ,sequence,request) &
          & bind(c, name='MORSE_zheev_Tile_Async')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zheev_Tile_Async_c
            integer(kind=c_int), value :: jobz
            integer(kind=c_int), value :: uplo
            type(c_ptr), value :: A
            type(c_ptr), value :: W
            type(c_ptr), value :: T
            type(c_ptr), value :: Q
            integer(kind=c_int), value :: LDQ
            type(c_ptr), value :: sequence
            type(c_ptr), value :: request
          end function MORSE_zheev_Tile_Async_c
      end interface

      interface
         function MORSE_zheevd_Tile_Async_c(jobz,uplo,A,W,T,Q,LDQ,sequence,request) &
          & bind(c, name='MORSE_zheevd_Tile_Async')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zheevd_Tile_Async_c
            integer(kind=c_int), value :: jobz
            integer(kind=c_int), value :: uplo
            type(c_ptr), value :: A
            type(c_ptr), value :: W
            type(c_ptr), value :: T
            type(c_ptr), value :: Q
            integer(kind=c_int), value :: LDQ
            type(c_ptr), value :: sequence
            type(c_ptr), value :: request
          end function MORSE_zheevd_Tile_Async_c
      end interface

      interface
         function MORSE_zhegst_Tile_Async_c(itype,uplo,A,B,sequence,request) &
          & bind(c, name='MORSE_zhegst_Tile_Async')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zhegst_Tile_Async_c
            integer(kind=c_int), value :: itype
            integer(kind=c_int), value :: uplo
            type(c_ptr), value :: A
            type(c_ptr), value :: B
            type(c_ptr), value :: sequence
            type(c_ptr), value :: request
          end function MORSE_zhegst_Tile_Async_c
      end interface

      interface
         function MORSE_zhegv_Tile_Async_c(itype,jobz,uplo,A,B,W,T,Q,sequence,request) &
          & bind(c, name='MORSE_zhegv_Tile_Async')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zhegv_Tile_Async_c
            integer(kind=c_int), value :: itype
            integer(kind=c_int), value :: jobz
            integer(kind=c_int), value :: uplo
            type(c_ptr), value :: A
            type(c_ptr), value :: B
            type(c_ptr), value :: W
            type(c_ptr), value :: T
            type(c_ptr), value :: Q
            type(c_ptr), value :: sequence
            type(c_ptr), value :: request
          end function MORSE_zhegv_Tile_Async_c
      end interface

      interface
         function MORSE_zhegvd_Tile_Async_c(itype,jobz,uplo,A,B,W,T,Q,sequence,request) &
          & bind(c, name='MORSE_zhegvd_Tile_Async')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: MORSE_zhegvd_Tile_Async_c
            integer(kind=c_int), value :: itype
            integer(kind=c_int), value :: jobz
            integer(kind=c_int), value :: uplo
            type(c_ptr), value :: A
            type(c_ptr), value :: B
            type(c_ptr), value :: W
            type(c_ptr), value :: T
            type(c_ptr), value :: Q
            type(c_ptr), value :: sequence
            type(c_ptr), value :: request
          end function MORSE_zhegvd_Tile_Async_c
      end interface
